src/main/java/com/example/restaurant_advisor/error/IllegalRequestDataException.java
package com.example.restaurant_advisor.error;

public class IllegalRequestDataException extends RuntimeException {
    public IllegalRequestDataException(String msg) {
        super(msg);
    }
}